tests/Rules/Structure/Fixtures/invalid/meta_refresh_timeout.html.twig
{# 1 errors #}
<meta http-equiv="refresh" content="30;url=https://example.com">
